# edge-abogen

./: .gitignore  LICENSE  README.md  pyproject.toml
edge_audiobook/: __init__.py  __main__.py  cli.py  converter.py  gui.py  parser.py  tts.py  utils.py
